# agentrewind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: replay_benchmark.py
docs/: ARCHITECTURE.md  EVALUATION.md  PRD.md  demo.tape
examples/: research_agent.py
src/agentlens/: __init__.py  cli.py  diff.py  models.py  providers.py  replay.py  sdk.py  server.py  store.py
src/agentrewind/: __init__.py  cli.py  providers.py  redaction.py  sdk.py  server.py  store.py
tests/: conftest.py  test_async.py  test_cli_and_server.py  test_diff.py  test_export_import.py  test_instrument.py  test_providers.py  test_redaction.py  test_replay.py  test_sdk.py  test_streaming.py
