[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrewind"
version = "0.2.0"
description = "Flight recorder for LLM agents: trace every call, replay runs deterministically, diff runs to find where behavior diverged."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shravya Munugala" }]
keywords = ["llm", "agents", "observability", "tracing", "replay", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
agentrewind = "agentrewind.cli:main"

[project.urls]
Homepage = "https://github.com/Shravya29M/agentrewind"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrewind"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# server.py embeds the single-file HTML/JS trace viewer as a string
"src/agentrewind/server.py" = ["E501"]
